fixing spacing

--- a/styles/index-stylesheet.css
+++ b/styles/index-stylesheet.css
@@ -114,7 +114,7 @@ body, html {
 .work-content {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 70vw;
     margin: 0 0 0 400px;
 }
 
